# localdns

./: .gitignore  Cargo.toml  GEMINI.md  README.md  config.toml
packaging/arch/: PKGBUILD  localdns.service
src/: config.rs  loader.rs  main.rs
